# My_page

./: .gitignore  Part2.md  Part3.md  Part4.md  compose.yml  definition.md  page.html  readme.md  temp.md
Tests/: k6-test.js  k6-test_VU1000D30.md  k6-test_VU100D150.md  k6-test_VU100D30.md  k6-test_VU1200D30.md  k6-test_VU500D30.md  k6-test_VU50D30.md  k6-test_VU700D30.md  k6VU50D30.md  k6_get_test.js
backend/: Cargo.toml
backend/src/: main.rs
docker/: docker-compose.yml  init.sql
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
temp/: Dockerfile  diesel.toml
todo_site/: Cargo.toml
todo_site/migrations/2025-04-03-123818_create_tehtavat/: down.sql  up.sql
todo_site/src/: main.rs  models.rs  schema.rs
