[package]
name = "todo_site"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
